@@ -1,0 +1,1 @@
+ALTER TABLE `altadv_vars` ADD `seq` INT(11) NOT NULL DEFAULT '0';
